--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ img {
     width: 100%;
     object-fit: cover;
 }
+picture {
+    flex-shrink: 0;
+    max-width: 100%;
+}
 a {
     text-decoration: none;
 }
@@ -55,6 +59,9 @@ textarea {
     }
     
 /* #region header */
+.header-container.for768 {
+    display: none;
+}
 .page-header {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -62,14 +69,35 @@ textarea {
 .header-container {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 16px 16px;
+}
+.div-menu-click {
+    width: 24px;
+    height: 24px;
+}
+.menu-click {
+    padding: 0;
+    border: transparent;
+    background-color: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2f2f37;
+}
+.icon-menu {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-click:hover,
+.menu-click:hover:focus {
+    fill:#404bbf;
 }
 .logo-container {
     display: flex;
     align-items: center;
+    margin-right: 122px;
 }
 .logo-header {
-    padding: 24px 0;
-    margin-right: 76px;
+    padding: 17px 0;
 }
 .logo {
     font-family: "Raleway", sans-serif;
@@ -117,16 +145,15 @@ textarea {
 }
 .address-container {
     display: flex;
-    align-items: center;
-    gap: 40px;
+    gap: 12px;
+    flex-wrap: wrap;
+
 }
 .infoadderess {
-    margin-left: auto;
     font-style: normal;
 }
 .link-address {
     display: block;
-    padding: 24px 0;
     color: currentColor;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -136,20 +163,138 @@ textarea {
 .link-address:focus {
     color: #404bbf;
 }
-
+.close-butt-menu {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2e2f42;
+}
+.icon-close-menu {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-butt-menu:hover,
+.close-butt-menu:focus {
+    background-color: #404bbf;
+    border: 0;
+    fill: #fff;
+}
 /* #endregion header */
+
+/* #region modal-menu */
+.modal-div-menu {
+    padding: 24px 24px 40px 16px;
+    position: fixed;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    background-color: #fff;
+    opacity: 1;
+    visibility: visible;
+    transform: translate(0, 0);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1)), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-div-menu.modal-not {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.modal-div-menu:not(.modal-not) .modal-div-menu {
+    transform: translate(-100%, -100%), scale(1.5);
+}
+.modal-close-butt {
+    text-align: end;
+    margin-bottom: 24px;
+}
+
+.logo-container-modal {
+    margin-bottom: 168px;
+}
+
+.list-header-modal {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.link-header-modal.for-blue {
+    color: #404bbf;
+}
+
+.link-header-modal {
+    display: block;
+    font-size: 36px;
+    font-weight: 700;
+    color: #2e2f42;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-header-modal:hover,
+.link-header-modal:focus {
+    color: #404bbf;
+}
+
+.address-container-modal {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.infoadderess-modal {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 48px;
+}
+
+.link-address-modal {
+    display: block;
+    color: currentColor;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-address-modal:hover,
+.link-address-modal:focus {
+    color: #404bbf;
+}
+
+.modal-div-menu .listforicon-team {
+    gap: 40px;
+    margin: 0;
+    justify-content: flex-start;
+}
+/* #endregion modal-menu */
 
 /* #region order service */
 .hero-image {
     margin: 0 auto;
     max-width: 100%;
     background-color: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/background.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/bg-mb.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     padding-top: 72px;
     padding-bottom: 72px;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx), (min-resolution: 192dpi) {
+    .hero-image {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/bg-mg-2x.jpg);
+    }
 }
 .h-main {
     margin-left: auto;
@@ -719,12 +864,21 @@ textarea {
     .hero-image {
         padding-top: 112px;
         padding-bottom: 112px;
+        background-color: #2e2f42;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/bg-tb.jpg);
     }
     .h-main {
         font-size: 56px;
         line-height: 1.07;
         max-width: 496px;
         margin-bottom: 36px;
+    }
+        @media screen and (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 2dppx),
+        (min-resolution: 192dpi) {
+        .hero-image {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/bg-tb-2x.jpg);
+    }
     }
 }
 /* #endregion media-768-order */
@@ -738,9 +892,18 @@ textarea {
     .hero-image {
         padding-top: 188px;
         padding-bottom: 188px;
+        background-color: #2e2f42;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/bg-2x.jpg); 
     }
     .h-main {
         margin-bottom: 48px;
+    }
+    @media screen and (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    .hero-image {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/decorative/bg-mg-2x.jpg);
+    }
     }
 }
 /* #endregion media-1158-order */
@@ -841,8 +1004,9 @@ textarea {
 
 /* #region media-768-portfolio */
 @media screen and (min-width: 768px) {
-    .container {
+    .portfolio-container .container {
         max-width: 768px;
+        padding: 0 16px;
     }
     .list-portfolio {
         row-gap: 72px;
@@ -856,7 +1020,7 @@ textarea {
 
 /* #region media-1158-portfolio */
 @media screen and (min-width: 1158px) {
-    .container {
+    .portfolio-container .container {
         max-width: 1158px;
         padding: 0 16px;
     }
@@ -865,12 +1029,11 @@ textarea {
         padding-bottom: 120px;
     }
     .list-portfolio {
-    column-gap: 24px;
-    row-gap: 48px;
+        column-gap: 24px;
+        row-gap: 48px;
     }
-
     .li-items-portfolio {
-    max-width: calc((100% - 24px * 2) / 3);
+        max-width: calc((100% - 24px * 2) / 3);
     }
 }
 /* #andregion media-1158-portfolio */
@@ -879,12 +1042,11 @@ textarea {
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
-        padding-right: 108px;
-        padding-left: 108px;
     }
     .container-footer {
         align-items: baseline;
         justify-content: flex-start;
+        margin-left: 92px;
     }
     .list-footer {
         text-align: start;
@@ -955,4 +1117,64 @@ textarea {
         max-width: 1158px;
     }
 }
+/* #andregion media-1158-modal */
+
+/* #region media-modal-menu */
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+    .header-container {
+        padding: 0 16px;
+        justify-content: start;
+        flex-wrap: nowrap;
+    }
+    .logo-header {
+        padding: 24px 0;
+        margin-right: 48px;
+    }
+    .div-menu-click {
+        display: none;
+    }
+    .modal-div-menu {
+        display: none;
+    }
+    .header-container.for320 {
+        display: none;
+    }
+    .header-container.for768 {
+        display: flex;
+    }
+    .link-address {
+        font-size: 12px;
+        line-height: 1.2;
+        letter-spacing: 0.04em;
+    }
+
+}
+/* #endregion media-modal-menu */
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+    }              
+    .logo-header {
+        padding: 24px 0;
+        margin-right: 76px;
+    }
+    .logo-container {
+        margin-right: 0;
+    }
+    .infoadderess {
+        margin-left: auto;
+                        }
+    .address-container {
+        gap: 40px;
+    }
+    .link-address {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+}
+
 /* #andregion media-1158-modal */
